@@ -2,7 +2,7 @@
 # ==============================================================================
 # Deploy It!
 # ==============================================================================
-set -e
+set -ex
 
 function doDeploy ()
 {
