@@ -2,7 +2,7 @@
 # ==============================================================================
 # Generate It!
 # ==============================================================================
-set -e
+set -ex
 
 function doGenerate ()
 {
