@@ -2,7 +2,7 @@
 # ==============================================================================
 # Init It!
 # ==============================================================================
-set -e
+set -ex
 
 function doInit ()
 {
