@@ -2,7 +2,7 @@
 # ==============================================================================
 # Push It!
 # ==============================================================================
-set -e
+set -ex
 
 # Here branch is "source" to me
 # {
