@@ -2,7 +2,7 @@
 # ==============================================================================
 # Serve It!
 # ==============================================================================
-set -e
+set -ex
 
 function doServe ()
 {
