@@ -1,0 +1,65 @@
+title: 关于
+date: 2016-02-17 15:09:40
+---
+
+<style type="text/css">
+  #ds-recent-visitors {
+    margin: 0;
+    padding: 0;
+  }
+  #ds-recent-visitors div img {
+    display: inline-block !important;
+    width: 56px !important;
+    height: 56px !important;
+    border-radius: 50%;
+    border: 1px solid #ddd;
+    padding: 2px;
+  }
+</style>
+
+> Everyone who comes in here wants three things:
+>　　1. They want it quick.
+>　　2. They want it good.
+>　　3. They want it cheap.
+> I tell 'em to pick two and call me back.
+>
+> -- sign on the back wall of a small printing company
+
++ 男生一枚，但不是可爱的男孩子。
++ 于2015 年7 月从一个名不见经传的学院毕业，1 个月后过上了码农的日常生活。
++ 目前在北京，对这个城市不喜欢也不讨厌。
++ 靠Linux 吃饭，码字常用Vim。
++ 真爱是Perl，能够原谅这门语言的很多缺陷。
++ 崇尚C++，但功力不够。
++ 不喜欢Java 和Python。
++ 尽管一直用Vim，但目前没有最爱的编辑器。
++ 在用了5 年Slackware 之后，最近2 年成了Arch 神教的忠实教徒。
++ 对空格有强烈的强迫。
++ 当下没有女朋友<s>，求妹纸带走</s>。
++ 非常喜欢的一本轻小说是支仓冻砂的《狼与香辛料》。
++ 喜欢阿尔托利亚·潘德拉贡。
++ 不太喜欢纯肉番。
++ 喜欢百合番和音乐主题的动画。
++ 型月社的作品多为真爱。
++ 对京阿尼的作品抱有高度的好感。
++ 不是很能接受漫画这种艺术形式。
++ 喜欢的作家是村上春树，其作品最为喜欢的是《奇鸟行状录》。
++ 喜欢梶浦由记的音乐，但对其本人知之甚少。
++ 日常面部表情：
+  * 平常地工作：(￣﹏￣)
+  * 开心地工作：(￣▽￣")
+  * 下班回窝后：( ˊ\_>ˋ)
+  * 地铁上：( ＿ ＿)ノ｜
+  * 被晒妹：Σ( ° △ °|||)︴
+  * 其他不开心的表情就不放了，因为真的不好看
+
+另外，你可以在此留言。
+
+2016 年夏
+
+[@愛と奇跡の物語](http://arondight.github.io)
+
+---
+
+<ul class="ds-recent-visitors" data-num-items="64" data-avatar-size="56"></ul>
+
